--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
  ----------------------*/
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 70px;
 }
 a{
     text-decoration: none;
@@ -24,9 +23,7 @@ li{
  nav{
      display: flex;
      justify-content: space-between;
-     margin-left: 20px;
-     margin-right: 20px;
-     margin-bottom: 150px;
+     margin: 90px;
  }
  ul{
      display: flex;
@@ -41,12 +38,17 @@ li{
  /*---------------------
  First section start 
  ----------------------*/
+ .sec_one{
+    margin: 70px;
+ }
  .first-section{
      display: flex;
+     margin-bottom: 150px;
  }
  .first-section-text{
     width: 50%;
     margin-left: 20px;
+    margin-top: -20px;
  }
  .first-section-text h1{
      font-size: 50px;
@@ -91,7 +93,8 @@ li{
      width: 270px;
      height: 430px;
      padding-left: 0;
-     margin-bottom: 20px;
+     margin-bottom: 25px;
+     margin-left: 35px;
      margin-top: 0;
  }
  .card-detil img{
@@ -135,5 +138,458 @@ li{
     font-size: 15px;
     font-weight: 160px;
     margin-left: 180px;
+    padding-top: 30px;
+}
+.fa-long-arrow-alt-right{
+    margin-left: 5px;
+    font-weight: 150px;
+}
+
+
+/*---------------------
+ Footer section start 
+ ----------------------*/
+ footer{
+     background-color: #120f25;
+     color: #ffffff;
+     margin: 0;
+     text-align: center;
+     height: 200px;
+     padding-top: 40px;
+ }
+ footer p{
+     font-size: 12px;
+     margin-top: -10px;
+ }
+ .footer-icons{
+     word-spacing: 30px;
+ }
+
+ /* ---------------------------------------------------------------------------------------------------------------
+                                                    Media Queries
+-------------------------------------------------------------------------------------------------------------------*/
+ /* Mobile Device */
+ @media only screen and (max-width:688px){
+      nav{
+          display: block;
+          align-items: center;
+          text-align: center;
+          margin-left: -20px;
+      }
+      nav h1{
+        display: block;
+        width: 100%;
+        margin-left: 10px;
+      }
+      nav ul{
+        display: block;
+      }
+      nav ul li{
+        display: block;
+        width: 100%;
+        line-height: 50px;
+      }
+
+/* First section start */
+ .sec_one{
+    margin: 30px;
+ }
+ .first-section{
+     display: block;
+     margin-bottom: 50px;
+ }
+ .first-section-text{
+    width: 50%;
+    margin-left: 10px;
+    margin-top: -10px;
+ }
+ .first-section-text h1{
+     font-size: 40px;
+     font-weight: 100px;
+ }
+ .first-section-img{
+     width: 100%;
+     margin-left: -120px;
+     margin-top: 40px;
+ }
+ .first-section-img img{
+     height: 100%;
+     width: 100%;
+ }
+ .button{
+     background-color: #cc3e79;
+     padding: 5px 5px;
+     color: aliceblue;
+     border-radius: 50px;
+ }
+ .button i svg{
+     padding-left: 10px;
+     color: yellowgreen;
+ }
+ /* First section end */
+
+/* Second section start */
+ .second-section{
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: -34px;
+    
+}
+.section-text{
+    text-align: center;
+}
+.box{
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 3px 1px 18px -2px #cccbcb;
+    width: 270px;
+    height: 430px;
+    padding-left: 0;
+    margin-bottom: 25px;
+    margin-left: 35px;
+    margin-top: 0;
+}
+.card-detil img{
+    height: 230px;
+    width: 250px;
+    margin: 10.5px; 
+}
+.text-detail{
+    margin-left: 10px;
+    margin-top: 0;
+    line-height: 10px;
+}
+.price{
+    font-size: 22px;
+}
+.fa-star{
+    font-size: 9px;
+    color: #f8af42;
+}
+.card-bottom{
+    font-size: 12px;
+    color: #868383;
+}
+.star-view{
+    display: flex;
+}
+.star-icon{
+    margin-right: 0;
+    margin-top: -1px; 
+}
+.star-view p{
+    margin-left: 5px;
+    margin-top: -0.001px; 
+}
+.card-bottom{
+   margin-left: 11px;
+   margin-top: 0;
+}
+.bottom-btn{
+   color: #cc3e79;
+   font-size: 15px;
+   font-weight: 160px;
+   margin-left: 180px;
+   padding-top: 30px;
+}
+.fa-long-arrow-alt-right{
+   margin-left: 5px;
+   font-weight: 150px;
+}
+/* Second section end */
+
+/* Footer section start */
+ footer{
+    background-color: #120f25;
+    color: #ffffff;
+    margin: 0;
+    text-align: center;
+    height: 200px;
+    padding-top: 40px;
+    margin-left: -85px;
+}
+footer p{
+    font-size: 12px;
+    margin-top: -10px;
+}
+.footer-icons{
+    word-spacing: 30px;
+}
+/* Footer section end */
+ }
+
+ /* Tab Device */
+ @media only screen and (min-width:689) and (max-width:992px){
+    nav{
+        display: block;
+        align-items: center;
+        text-align: center;
+        margin-left: 20px;
+    }
+    nav h1{
+      display: block;
+      width: 100%;
+      margin-left: 10px;
+    }
+    nav ul{
+      display: block;
+    }
+    nav ul li{
+      display: block;
+      width: 100%;
+      line-height: 50px;
+    }
+/* First section start */
+.sec_one{
+    margin: 30px;
+ }
+ .first-section{
+     display: block;
+     margin-bottom: 50px;
+ }
+ .first-section-text{
+    width: 50%;
+    margin-left: 10px;
+    margin-top: -10px;
+ }
+ .first-section-text h1{
+     font-size: 40px;
+     font-weight: 100px;
+ }
+ .first-section-img{
+     width: 100%;
+     margin-left: -120px;
+     margin-top: 40px;
+ }
+ .first-section-img img{
+     height: 100%;
+     width: 100%;
+ }
+ .button{
+     background-color: #cc3e79;
+     padding: 5px 5px;
+     color: aliceblue;
+     border-radius: 50px;
+ }
+ 
+ /* First section end */ 
+ 
+ /* Second section start */
+ .second-section{
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: -34px;
+    
+}
+.section-text{
+    text-align: center;
+}
+.box{
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 3px 1px 18px -2px #cccbcb;
+    width: 270px;
+    height: 430px;
+    padding-left: 0;
+    margin-bottom: 25px;
+    margin-left: 35px;
+    margin-top: 0;
+}
+.card-detil img{
+    height: 230px;
+    width: 250px;
+    margin: 10.5px; 
+}
+.text-detail{
+    margin-left: 10px;
+    margin-top: 0;
+    line-height: 10px;
+}
+.price{
+    font-size: 22px;
+}
+.fa-star{
+    font-size: 9px;
+    color: #f8af42;
+}
+.card-bottom{
+    font-size: 12px;
+    color: #868383;
+}
+.star-view{
+    display: flex;
+}
+.star-icon{
+    margin-right: 0;
+    margin-top: -1px; 
+}
+.star-view p{
+    margin-left: 5px;
+    margin-top: -0.001px; 
+}
+.card-bottom{
+   margin-left: 11px;
+   margin-top: 0;
+}
+.bottom-btn{
+   color: #cc3e79;
+   font-size: 15px;
+   font-weight: 160px;
+   margin-left: 180px;
+   padding-top: 30px;
+}
+.fa-long-arrow-alt-right{
+   margin-left: 5px;
+   font-weight: 150px;
+}
+/* Second section end */
+ } 
+
+ @media only screen and (min-width:993) and (max-width:1312px){
+/*---------------------
+ Header Nav 
+ ----------------------*/
+ nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 90px;
+}
+ul{
+    display: flex;
+}
+li{
+    margin-right: 25px;
+    font-weight: 100px;
+}
+
+
+
+/*---------------------
+First section start 
+----------------------*/
+.sec_one{
+   margin: 70px;
+}
+.first-section{
+    display: flex;
+    margin-bottom: 150px;
+}
+.first-section-text{
+   width: 50%;
+   margin-left: 20px;
+   margin-top: -20px;
+}
+.first-section-text h1{
+    font-size: 50px;
+    font-weight: 150px;
+}
+.first-section-img{
+    width: 50%;
+    margin-top: -20px;
+}
+.first-section-img img{
+    margin-left: 80px;
+}
+.button{
+    background-color: #cc3e79;
+    padding: 10px 20px;
+    color: aliceblue;
+    border-radius: 50px;
+}
+.button i svg{
+    padding-left: 10px;
+    color: yellowgreen;
+}
+
+
+
+/*---------------------
+Second section start 
+----------------------*/
+.second-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 110px;
+    padding: 0;
+}
+.section-text{
+    text-align: center;
+}
+.box{
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 3px 1px 18px -2px #cccbcb;
+    width: 270px;
+    height: 430px;
+    padding-left: 0;
+    margin-bottom: 25px;
+    margin-left: 35px;
+    margin-top: 0;
+}
+.card-detil img{
+    height: 230px;
+    width: 250px;
+    margin: 10.5px; 
+}
+.text-detail{
+    margin-left: 10px;
+    margin-top: 0;
+    line-height: 10px;
+}
+.price{
+    font-size: 22px;
+}
+.fa-star{
+    font-size: 9px;
+    color: #f8af42;
+}
+.card-bottom{
+    font-size: 12px;
+    color: #868383;
+}
+.star-view{
+    display: flex;
+}
+.star-icon{
+    margin-right: 0;
+    margin-top: -1px; 
+}
+.star-view p{
+    margin-left: 5px;
+    margin-top: -0.001px; 
+}
+.card-bottom{
+   margin-left: 11px;
+   margin-top: 0;
+}
+.bottom-btn{
+   color: #cc3e79;
+   font-size: 15px;
+   font-weight: 160px;
+   margin-left: 180px;
+   padding-top: 30px;
+}
+.fa-long-arrow-alt-right{
+   margin-left: 5px;
+   font-weight: 150px;
+}
+
+
+/*---------------------
+Footer section start 
+----------------------*/
+footer{
+    background-color: #120f25;
+    color: #ffffff;
+    margin: 0;
+    text-align: center;
+    height: 200px;
     padding-top: 40px;
 }
+footer p{
+    font-size: 12px;
+    margin-top: -10px;
+}
+.footer-icons{
+    word-spacing: 30px;
+}
+
+ }
